Make changes on the about page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site uses data from the <a href="https://www.mapbox.com/" target="_blank">Mapbox</a> and <a href="https://openweathermap.org/" target="_blank">Openweathermap</a></p>
         <img src="img/robot.png" alt="robot img" id="about-img">
     </div>
 
